--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,13 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "i": "^0.3.7",
+    "npm": "^8.12.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-cards": "^1.1.4",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
