--- a/server/.env
+++ b/server/.env
@@ -27,7 +27,7 @@ APP_SECRET=a62ff5c19874d6a4ea6e3ad181adfa5f
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://tenec:tene@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL="mysql://tenec:tene@127.0.0.1:3306/TeachrsBdd?serverVersion=5.7&charset=utf8mb4"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
